@@ -1,3 +1,5 @@
+2006-02-27 Improved eps bounding boxes with usetex - DSD
+
 2006-02-27 Test svn commit, again!
 
 2006-02-27 Fixed two dependency checking bugs related to usetex
